# y2_ai_engineer_home_assignment

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  grafana_dashboard.json  prometheus.yml  pyproject.toml  requirements.txt  taxonomy.faiss  taxonomy.meta.json  yad2_search_taxonomy.json
grafana_provisioning/dashboards/: default.yml
grafana_provisioning/datasources/: prometheus.yml
scripts/: bodies.txt  build_taxonomy_index.py  run_collection.sh  stress_test.py  test_examples.py
src/: config.py  main.py
src/cache/: __init__.py  cache.py
src/graph/: __init__.py  build.py  context.py  state.py
src/graph/nodes/: __init__.py  cache_lookup.py  cache_store.py  complete.py  extract.py  normalize.py  sanitize.py  security_check.py  validate.py
src/llm/: __init__.py  client.py  prompts.py
src/observability/: __init__.py  logging_config.py  metrics.py
src/patterns/: __init__.py  discover.py  library.py  normalizations.py  numbers.py  segment_types.py
src/taxonomy/: __init__.py  build_index.py  loader.py  product_aliases.json  schemas.py  semantic_index.py
tests/: conftest.py  eval_cases.json  run_eval.py  test_llm_integration.py  test_patterns.py  test_security_redteam.py
tests/dataset/: cases.json  test_cases.py
tests/integration/: test_examples.py  test_llm_integration.py  test_pipeline.py  test_security_redteam.py
tests/nodes/: test_normalize.py  test_sanitize.py  test_validate.py
tests/unit/: test_cache.py  test_library.py  test_loader.py  test_numbers.py
tests/unit/nodes/: test_complete.py  test_extract.py  (+2 more)
